<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.AboutUsPage">
    <include layout="@layout/header_main"/>

    <RelativeLayout
        android:id="@+id/relative_layout_about_us"
        android:layout_width="match_parent"
        android:layout_height="100dp"/>
    <TextView
        android:id="@+id/team_title_desc"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_below="@+id/relative_layout_about_us"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/team_description_title"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="#000000"/>
    <FrameLayout
        android:layout_width="128dp"
        android:layout_height="2dp"
        android:layout_below="@+id/team_title_desc"
        android:layout_marginStart="15dp"
        android:background="#00796B"/>
    <TextView
        android:id="@+id/team_description"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/team_title_desc"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="35dp"
        android:text="@string/team_description"
        android:textColor="@color/black"/>
    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:id="@+id/galam_img"
        app:shapeAppearanceOverlay="@style/roundedImageView"
        app:strokeWidth="1dp"
        app:strokeColor="#00796B"
        android:src="@drawable/team_leader_galam"
        android:layout_below="@id/team_description"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"/>
    <TextView
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_toEndOf="@id/galam_img"
        android:layout_marginTop="325dp"
        android:layout_marginStart="10dp"
        android:text="@string/team_leader"
        android:textColor="@color/black"/>
    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:id="@+id/galut_img"
        app:shapeAppearanceOverlay="@style/roundedImageView"
        app:strokeWidth="1dp"
        app:strokeColor="#00796B"
        android:src="@drawable/documentation_lead_galut"
        android:layout_below="@id/team_description"
        android:layout_marginTop="15dp"
        android:layout_marginStart="190dp"/>
    <TextView
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_toEndOf="@id/galut_img"
        android:layout_marginTop="320dp"
        android:layout_marginStart="10dp"
        android:text="@string/documentation_lead"
        android:textColor="@color/black"/>
    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:id="@+id/adriano_img"
        app:shapeAppearanceOverlay="@style/roundedImageView"
        app:strokeWidth="1dp"
        app:strokeColor="#00796B"
        android:src="@drawable/lead_developer_adriano"
        android:layout_below="@id/galam_img"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"/>
    <TextView
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_toEndOf="@id/adriano_img"
        android:layout_marginTop="410dp"
        android:layout_marginStart="10dp"
        android:text="@string/lead_developer"
        android:textColor="@color/black"/>
    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:id="@+id/juarez_img"
        app:shapeAppearanceOverlay="@style/roundedImageView"
        app:strokeWidth="1dp"
        app:strokeColor="#00796B"
        android:src="@drawable/ui_ux_developer_juarez"
        android:layout_below="@id/galut_img"
        android:layout_marginTop="30dp"
        android:layout_marginStart="190dp" />
    <TextView
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_toEndOf="@id/juarez_img"
        android:layout_marginTop="400dp"
        android:layout_marginStart="10dp"
        android:text="@string/ui_ux_developer"
        android:textColor="@color/black"/>
    <ImageView
        android:id="@+id/phone_number_id"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/phone_number_icon"
        android:layout_below="@id/adriano_img"
        android:layout_marginTop="30dp"
        android:layout_marginStart="9dp"/>
    <TextView
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_toEndOf="@id/phone_number_id"
        android:layout_marginTop="495dp"
        android:text="@string/phone_number"
        android:textColor="@color/black"/>
    <ImageView
        android:id="@+id/email_address_id"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/email_address_icon"
        android:layout_below="@id/adriano_img"
        android:layout_marginTop="90dp"
        android:layout_marginStart="6dp"/>
    <TextView
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_toEndOf="@id/email_address_id"
        android:layout_marginTop="555dp"
        android:text="@string/email_address"
        android:textColor="@color/black"/>
    <ImageView
        android:id="@+id/facebook_id"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:src="@drawable/facebook_icon"
        android:layout_below="@id/adriano_img"
        android:layout_marginTop="165dp"
        android:layout_marginStart="20dp"/>
    <TextView
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_toEndOf="@id/facebook_id"
        android:layout_marginTop="623dp"
        android:layout_marginStart="10dp"
        android:text="@string/facebook"
        android:textColor="@color/black"/>


    
</RelativeLayout>