<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.HomePage">
    <include layout="@layout/header_main"/>

    <!-- This Relative Layout is only a transparent object replacement of the header for the homepage -->
    <RelativeLayout
        android:id="@+id/relative_layout_home_page"
        android:layout_width="match_parent"
        android:layout_height="100dp"/>
    <!-- Container for input text and speech text -->
    <RelativeLayout
        android:id="@+id/text_input_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_below="@id/relative_layout_home_page"
        android:background="@drawable/rounded_frame_layout"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">
        <!-- Input text -->
        <RelativeLayout
            android:id="@+id/text_input_id"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_toStartOf="@id/mic_id"
            android:layout_centerVertical="true"
            android:background="@drawable/rounded_text_layout"
            android:layout_marginStart="10dp">
            <EditText
                android:id="@+id/editTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:ems="10"
                android:inputType="text"
                android:text="@string/enter_text" />
        </RelativeLayout>
        <!-- Speech text -->
        <RelativeLayout
            android:id="@+id/mic_id"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/rounded_off_mic_layout">
            <ImageView
                android:padding="8dp"
                android:id="@+id/off_record_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/baseline_mic_none_24"
                app:tint="#FFFFFF"/>
        </RelativeLayout>
    </RelativeLayout>

    <!-- Container for the result texts -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/text_input_frame_layout"
        android:background="@drawable/rounded_frame_layout"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_text_layout"
            android:layout_margin="5dp">
            <FrameLayout
                android:id="@+id/half_line_textoutput"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#00796B"
                android:layout_centerVertical="true"/>
            <TextView
                android:id="@+id/english_text"
                android:layout_width="100dp"
                android:layout_height="25dp"
                android:text="@string/english_title"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"/>
            <FrameLayout
                android:layout_width="80dp"
                android:layout_height="2dp"
                android:background="#00796B"
                android:layout_below="@+id/english_text"
                android:layout_marginStart="5dp"/>
            <TextView
                android:id="@+id/eng_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/english_text"
                android:layout_above="@id/half_line_textoutput"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/input_text"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/ilocano_text"
                android:layout_width="100dp"
                android:layout_height="25dp"
                android:text="@string/ilocano_title"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_below="@id/half_line_textoutput"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"/>
            <FrameLayout
                android:layout_width="80dp"
                android:layout_height="2dp"
                android:background="#00796B"
                android:layout_below="@+id/ilocano_text"
                android:layout_marginStart="5dp"/>
            <TextView
                android:id="@+id/ilo_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/ilocano_text"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/output_text"
                android:textSize="12sp"/>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>